# the-tale

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  INSTALL  INSTALL.rst  LICENCE  LICENSE  MANIFEST.in  README.rst  SECRET INFORMATION!1!.txt  lore_todo.org  manage.py  profile.info  requirements.txt  setup.py  stage-1.md  todo.org
src/the_tale/: MANIFEST.in  pyproject.toml  requirements.txt  setup.py
src/the_tale/the_tale/: amqp_environment.py  meta_config.json  olbanizator.py  settings.py  settings_local_example.py  smart_imports.json  urls.py  wsgi.py
src/the_tale/the_tale/accounts/: admin.py  conf.py  create_hero.py  data_protection.py  exceptions.py  forms.py  jinjaglobals.py  logic.py  meta_relations.py  middleware.py  might.py  models.py  objects.py  postponed_tasks.py  prototypes.py  relations.py  signals.py  tt_api.py  tt_services.py  urls.py  views.py
src/the_tale/the_tale/blogs/: __init__.py  admin.py  conf.py  context_processors.py  forms.py  helpers.py  jinjaglobals.py  logic.py  meta_relations.py  models.py  prototypes.py  relations.py  urls.py  views.py
src/the_tale/the_tale/clans/: admin.py  conf.py  data_protection.py  emissaries_views.py  exceptions.py  forms.py  helpers.py  logic.py  meta_relations.py  models.py  objects.py  relations.py  storage.py  tt_services.py  views.py
src/the_tale/the_tale/cms/: conf.py  urls.py  views.py
src/the_tale/the_tale/collections/: admin.py  conf.py  container.py  exceptions.py  forms.py  logic.py  models.py  prototypes.py  storage.py  urls.py  views.py
src/the_tale/the_tale/forum/: admin.py  conf.py  exceptions.py  forms.py  helpers.py  jinjaglobals.py  models.py  prototypes.py  read_state.py  relations.py  urls.py  views.py
src/the_tale/the_tale/game/: admin.py  attributes.py  conf.py  effects.py  exceptions.py  habits.py  helpers.py  jinjaglobals.py  logic.py  logic_storage.py  models.py  names.py  politic_power.py  postponed_tasks.py  prototypes.py  relations.py  short_info.py  technical_words.py  tt_api.py  tt_api_impacts.py  tt_services.py  turn.py  urls.py  views.py
src/the_tale/the_tale/guide/: conf.py  context_processors.py  urls.py  views.py
src/the_tale/the_tale/jinja2/: base.html  error.html  macros.html
src/the_tale/the_tale/less/: blogs.less  constants.less  forms.less  forum.less  game.less  guide.less  main.less  mobs.less  newspaper.less  pvp.less
src/the_tale/the_tale/linguistics/: admin.py  conf.py  context_processors.py  exceptions.py  forms.py  helpers.py  jinjaglobals.py  logic.py  models.py  objects.py  prototypes.py  relations.py  restrictions.py  storage.py  urls.py  views.py  word_drawer.py
src/the_tale/the_tale/news/: admin.py  conf.py  forms.py  jinjaglobals.py  logic.py  meta_relations.py  models.py  objects.py  relations.py  urls.py  views.py
src/the_tale/the_tale/portal/: __init__.py  apps.py  conf.py  context_processors.py  discord.py  events_bloks.py  helpers.py  jinjaglobals.py  logic.py  signal_processors.py  signals.py  tt_services.py  urls.py  views.py
src/the_tale/the_tale/post_service/: admin.py  conf.py  logic.py  message_handlers.py  models.py  prototypes.py  relations.py
src/the_tale/the_tale/static/: maintenance.html
src/the_tale/the_tale/statistics/: admin.py  conf.py  dygraph.py  exceptions.py  helpers.py  models.py  prototypes.py  relations.py  urls.py  views.py
src/the_tale/the_tale/templates/: base.html  email.txt  macros.html
src/tt_bank/: pyproject.toml  setup.py
src/tt_bank/tt_bank/: conf.py  exceptions.py  handlers.py  logic.py  models.py  objects.py  operations.py  protobuf.py  relations.py  service.py  settings.py
src/tt_bank/tt_bank/commands/: tt_bank_remove_old_transactions.py  tt_bank_rollback_hanged_transactions.py
src/tt_bank/tt_bank/migrations/: 0001_initial.py  0002_auto_20171214_1937.py  0003_auto_20171214_1958.py  0004_auto_20180119_1955.py  0005_transaction_data.py  0006_auto_20190908_0827.py  0007_auto_20211018_1946.py  0008_auto_20211109_0535.py
src/tt_bank/tt_bank/tests/: helpers.py  test_handlers.py  test_logic.py  test_objects.py  test_operations.py
src/tt_data_protector/: pyproject.toml  setup.py
src/tt_data_protector/tt_data_protector/: exceptions.py  handlers.py  logic.py  models.py  objects.py  operations.py  protobuf.py  relations.py  service.py  settings.py
src/tt_data_protector/tt_data_protector/commands/: tt_data_protector_process_tasks.py
src/tt_data_protector/tt_data_protector/migrations/: 0001_initial.py  0002_deletionhistory_deletionrequest.py  0003_auto_20211109_0533.py
src/tt_discord/: pyproject.toml  setup.py
src/tt_discord/tt_discord/: bot.py  conf.py  handlers.py  logic.py  models.py  objects.py  operations.py  protobuf.py  relations.py  service.py  settings.py
src/tt_effects/: MANIFEST.in  pyproject.toml  setup.py
src/tt_effects/tt_effects/: handlers.py  models.py  objects.py  operations.py  protobuf.py  service.py  settings.py
src/tt_market/: pyproject.toml  setup.py
src/tt_market/tt_market/: conf.py  exceptions.py  handlers.py  models.py  objects.py  operations.py  protobuf.py  relations.py  service.py  settings.py
src/tt_matchmaker/: pyproject.toml  setup.py
src/tt_matchmaker/tt_matchmaker/: exceptions.py  handlers.py  models.py  objects.py  operations.py  protobuf.py  service.py  settings.py
src/tt_personal_messages/: pyproject.toml  setup.py
src/tt_personal_messages/tt_personal_messages/: handlers.py  models.py  objects.py  operations.py  protobuf.py  relations.py  service.py  settings.py
src/tt_protocol/: MANIFEST.in  pyproject.toml  setup.py
src/tt_uniquer/: pyproject.toml  setup.py
src/tt_uniquer/tt_uniquer/: handlers.py  models.py  operations.py  service.py  settings.py
src/tt_web/: pyproject.toml  setup.py
src/tt_web/tt_web/: default_settings.py  handlers.py  log.py  postgresql.py  results.py  s11n.py  utils.py
src/tt_web/tt_web/common/: event.py  (+5 more)
src/tt_xsolla/: pyproject.toml  setup.py
src/tt_xsolla/tt_xsolla/: conf.py  handlers.py  logic.py  models.py  objects.py  operations.py  protobuf.py  relations.py  service.py  settings.py  xsolla.py
(+5009 files in other folders)
