[tool.poetry]
name = "the_tale"
version = "0.4.3.3"
description = "Zero Player Game with indirect character controll."
repository = "https://github.com/Tiendil/the-tale"
authors = ["Aliaksei Yaletski (Tiendil) <a.eletsky@gmail.com>"]
license = "BSD-3"
exclude = ["docs", "the_tale/dcont"]

[tool.poetry.dependencies]
python = "^3.10"

Django = '3.2.9'
argon2_cffi = "21.1.0"
Jinja2 = "3.0.2"
psycopg2 = "2.9.1"

kombu = "5.2.1"
postmarkup = "1.2.2"
Markdown = "3.3.4"
xlrd = "2.0.1"
MarkupSafe = "2.0.1"
django-redis = "5.0.0"
psutil = "5.8.0"
requests = "2.26.0"
gunicorn = "20.1.0"
sentry-sdk = "1.4.3"

pynames = "0.2.4"
utg = "0.3.1"
rels = "0.3.1"
smart_imports = "0.2.7"

deworld = "0.2.3"
questgen = "0.4.2"

tt_protocol = { path = "../tt_protocol/", develop = true }
tt_logic = { path = "../tt_logic/", develop = true }
tt_calendar = { path = "../tt_calendar/", develop = true }

[tool.poetry.dev-dependencies]
django-test-without-migrations = "^0.6"
typeguard = "2.13.0"
