[tool.poetry]
name = "tt_data_protector"
version = "0.1"
description = "Data protector service for The Tale."
repository = "https://github.com/Tiendil/the-tale"
authors = ["Aliaksei Yaletski (Tiendil) <a.eletsky@gmail.com>"]
license = "BSD-3"

[tool.poetry.dependencies]
python = "^3.9"

tt_web = { path = "../tt_web/", develop = true }
tt_protocol = { path = "../tt_protocol/", develop = true }

[tool.poetry.scripts]
tt_data_protector_process_tasks = "tt_data_protector.commands.tt_data_protector_process_tasks:main"