[tool.poetry]
name = "tt_discord"
version = "0.1"
description = "Discord bot service for The Tale."
repository = "https://github.com/Tiendil/the-tale"
authors = ["Aliaksei Yaletski (Tiendil) <a.eletsky@gmail.com>"]
license = "BSD-3"

[tool.poetry.dependencies]
python = "^3.10"

py-cord = "1.7.3"
# nextcord = "2.0.0a3"

tt_web = { path = "../tt_web/", develop = true }
tt_protocol = { path = "../tt_protocol/", develop = true }

[tool.poetry.extras]
py-cord = ["speed"]
# nextcord = ["speed"]