        [tool.poetry]
name = "tt_web"
version = "0.1"
description = "Web framework for The Tale."
repository = "https://github.com/Tiendil/the-tale"
authors = ["Aliaksei Yaletski (Tiendil) <a.eletsky@gmail.com>"]
license = "BSD-3"


[tool.poetry.dependencies]
python = "^3.10"

aiohttp = ">=3.7"
cchardet = '2.1.7'
aiodns = '3.0.0'
aiopg = '1.3.3'
Django = '3.2.17'
yarl = '1.7.2'


[tool.poetry.dev-dependencies]

django-test-without-migrations = "^0.6"


[tool.poetry.scripts]
tt_service = "tt_web.commands.tt_service:main"
